# Prism-Research

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.db  README.md  docker-compose.yml  pyproject.toml
.veris/: Dockerfile.sandbox  veris.yaml
apps/api/: pyproject.toml
apps/api/src/prism_api/: __init__.py  config.py  db.py  main.py  models.py
apps/api/src/prism_api/integrations/: __init__.py  veris_mount.py  you_com.py
apps/api/src/prism_api/services/: chunking.py  embeddings.py  eval_scenarios.py  ingest_service.py  llm_runtime.py  local_learning_signals.py  pdf_ingest.py  pii_scrub.py  quality_gate.py  rbac.py  retrieve.py  run_service.py
apps/fl_stretch/: pyproject.toml
apps/fl_stretch/src/fl_prism/: __init__.py  sim_toy.py
apps/web/: env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  prism-fallback.css
apps/web/app/components/: DemoLanding.tsx  PrismWorkspace.tsx  SystemDesignDiagram.tsx
apps/web/app/workspace/: page.tsx
backend/: __init__.py
backend/agents/: __init__.py  analysis_agent.py  json_util.py  llm_one.py  ollama_client.py  pipeline.py  research_agent.py  tenant_retriever.py  thesis_agent.py
deploy/baseten-llama/: README.md  config.yaml
docs/: federated_round_simulation.md
fl-aggregates/: round-1.txt
mcp/prism-market-intel/: pyproject.toml
mcp/prism-market-intel/src/prism_mcp_intl/: __init__.py  server.py
scripts/: apply_migrations.sh  init.sql  run-api.sh  seed_demo_clients.py  simulate_federated_round.py
scripts/migrations/: 001_tenant_llm.sql  002_architecture_plane.sql  003_evidence_access_subject.sql  004_rename_demo_tickers_to_company.sql
(+1 files in other folders)
