[project]
name = "prism-fl-stretch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flwr[simulation]>=1.8.0",
    "numpy>=1.26.0",
]

[project.scripts]
prism-fl-demo = "fl_prism.sim_toy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fl_prism"]
